--- a/src/sass/_connSearch.scss
+++ b/src/sass/_connSearch.scss
@@ -32,6 +32,13 @@
         height: 36px;
         position: relative;
     }
+    .searchshow{
+        width: 100%;
+        background-color: #fff;
+        position: absolute;
+        left: 0;
+        top: 36px;
+    }
     form{
         display: block;
         height: 36px;
