--- a/src/sass/_connNav.scss
+++ b/src/sass/_connNav.scss
@@ -85,7 +85,7 @@ nav{
             border-top: 0;
             background-color: #f7f7f7;
             box-shadow: 1px 4px 0 rgba(0,0,0, 0.05);
-            // transition: top .25s ease;
+            transition: top .25s ease;
         }
         .partleft{
             float: left;
