--- a/src/css/index.css
+++ b/src/css/index.css
@@ -852,6 +852,13 @@ input[type=text] {
   color: #f10214;
 }
 
+footer {
+  width: 100%;
+}
+footer img {
+  width: 100%;
+}
+
 body {
   background-color: #F5F5F5 !important;
 }
